--- a/accounts/templates/accounts/profile2.html
+++ b/accounts/templates/accounts/profile2.html
@@ -65,6 +65,7 @@
 
     <div class="container-fluid">
         <div class="row">
+            <!-- padaryti kaip second step registracijos -->
             <div class="col d-flex justify-content-center pt-5">
                 <form action="." class="profile-table p-2 m-0" method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
