--- a/posts/templates/posts/update_post.html
+++ b/posts/templates/posts/update_post.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'posts/styles/homepage.css' %}">
-    <title>Posts</title>
+    <title>Update Post</title>
 </head>
 
 <body>
@@ -62,50 +62,33 @@
         </div>
     </nav>
 
-    <div class="container-fluid all-categories p-0 m-0">
-        <div class="row category-section p-0 m-3">
-            <div class="row category-name-row ps-2 ms-0 mt-0 me-2 mb-0">
-                <div class="col-auto p-0">
-                    <p class="category-name text-decoration-none fw-bold fs-6 text-uppercase p-0 m-0">{{category.get_title}}</p>
+    <div class="container-fluid update-post p-0 m-0">
+        <div class="row update-post-section p-0 m-3 ">
+            <form class="update-post-form" method="POST">
+                {% csrf_token %}
+                <h1 class="text-uppercase">Update the fields</h1>
+                {{form.title}} {{form.content}} {{form.tags}}
+                <!-- <div class="col new-post-title-col">
+                    <p class="text-uppercase fw-bold m-0 pt-2">Title:</p>
+                    {{ form.title }}
                 </div>
-            </div>
-            {% if posts %} {% for post in posts %}
-            <div class="row post-info-row border border-dark ms-0 mt-1 me-2 mb-1 ps-0 pe-0">
-                <div class="col-1 d-flex align-items-center post-icon-col py-1">
-                    <img src="{% static 'media/topic-icon.svg' %}" alt="topic-icon" class="topic-icon">
+                <div class="col new-post-content-col">
+                    <p class="text-uppercase fw-bold m-0 pt-2">Content:</p>
+                    {{ form.content|safe }}
                 </div>
-                <div class="col-8 post-info p-0 ps-2">
-                    <a class="post-title fw-bold text-decoration-none m-0 fs-5" href="{% url 'detail' post.slug %}">{{post.title}}</a>
-                    <p class="post-start fst-italic">{{post.get_snippet|striptags}}</p>
-                    <small>by
-                        <a href="{{post.user.fullname}}" class="last-post-user-link fw-bold">{{category.last_post.user.fullname}}</a>
-                        <p class="post-extra-info fst-italic text-decoration-none m-0">At {{post.date}} <br> Has {% get_hit_count for post %} views | {{post.num_comments}} comments </p>
-                    </small>
+                <div class="col new-post-categories-col">
+                    <p class="text-uppercase fw-bold m-0 pt-2">Select Category:</p>
+                    {{ form.categories }}
                 </div>
-                {% if post.last_reply %}
-                <div class="col post-side-info border-start border-dark ps-1 p-1">
-                    <div class="row">
-                        <div class="col-12">
-                            <p class="text-center m-0 p-0 fw-bold">Latest Reply</p>
-                        </div>
-                        <div class="col-2 m-1">
-                            <img src="{{post.last_reply.user.profile_pic.url}}" alt="user-avatar" class="lr-user-avatar">
-                        </div>
-                        <div class="col-xxl-auto col-xl m-1">
-                            <small><a href="" class="username">{{post.last_reply.user.fullname}}</a><br></small>
-                            <small class="reply-extra-info fst-italic text-decoration-none m-0">At {{post.last_reply.date}}</small>
-                        </div>
-                    </div>
+                <div class="col new-post-tags-col">
+                    <p class="text-uppercase fw-bold m-0 pt-2">Enter a Tag:</p>
+                    {{ form.tags }}
+                </div> -->
+                <div class="btn-div d-grid gap-2 col-1 pt-4">
+                    <input class="btn text-uppercase fw-bold" type="submit" value="Update">
                 </div>
-                {% endif %}
-            </div>
-            {% endfor %} {% else %}
-            <p class="post-start fst-italic text-center">No posts found in this category</p>{% endif %}
+            </form>
         </div>
-    </div>
-
-    <div class="paginator m-3">
-        <b class="ms-2 fst-italic">Pages:</b> {% for num_page in posts.paginator.page_range %} <a class="border border-dark mx-1 px-1" href="?page={{num_page}}">{{num_page}}</a> {% endfor %}
     </div>
 </body>
 
