--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -12,8 +12,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'posts/styles/homepage.css' %}">
+    <script src="{% static 'posts/js/main.js' %}"></script>
     <title>Post</title>
+
 </head>
 
 <body>
@@ -21,8 +24,8 @@
         <div class="container-fluid">
             <a class="navbar-brand text-uppercase fw-bold fs-3" href="{% url 'home' %}">forum</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+                    <span class="navbar-toggler-icon"></span>
+                </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -67,12 +70,15 @@
         <div class="row post-section p-0 m-3">
             <div class="row topic-title-row ps-2 ms-0 mt-0 me-2 mb-0">
                 <div class="col p-0">
-                    <p class="topic-name text-decoration-none fw-bold fs-4 text-uppercase p-0 m-0">{{ post.get_title }}</p>
+                    <p class="topic-name text-decoration-none fw-bold fs-4 text-uppercase p-0 m-0">
+                        {{ post.get_title }}</p>
                 </div>
             </div>
             <div class="row post-info-row ms-0 mt-1 me-2 mb-1 ps-0 pe-0">
                 <div class="col-1 user-info-col text-center py-1">
-                    <img src="{{post.user.profile_pic.url}}" alt="user-avatar" class="user-avatar"><br>
+                    {% if post.user.profile_pic %}
+                    <img src="{{post.user.profile_pic.url}}" alt="user-avatar" class="user-avatar"><br> {% else %}
+                    <img src="{% static 'media/user_avatars/happy_tux.jpg' %}" alt="user-avatar" class="user-avatar"><br> {% endif %}
                     <a href="" class="username text-decoration-none">{{ post.user.fullname }}</a><br>
                     <small class="user-points">Points: {{post.user.points}}</small><br>
                     <small class="user-posts">Posts: {{post.user.num_posts}}</small>
@@ -82,7 +88,11 @@
                         {{ post.content|safe }}
                     </div>
                     <div class="row">
-                        <p class="text-end align-text-bottom m-0 hitpoints">Views: {% get_hit_count for post %}</p>
+                        <div class="col d-flex justify-content-end">
+                            {% if post.user.id == request.user.id %}
+                            <button class="btn btn-dark" name="del" onclick="location.href='{% url 'delete-post' post.slug %}'">Delete</button>
+                            <button class="btn btn-dark" name="upd" onclick="location.href='{% url 'edit-post' post.slug %}'">Update</button>{% endif %}
+                        </div>
                     </div>
                 </div>
             </div>
@@ -90,39 +100,103 @@
     </div>
 
     <!-- comments -->
-    <h3 class="name text-uppercase ps-3 bg-black">Comments</h3>
+    <h3 class="name text-uppercase ps-3 bg-black ">Comments</h3>
     {% for comment in post.comments.all %}
-    <div class="row comment-section p-0 m-3">
-        <div class="row comment-info-row ms-0 mt-1 me-2 mb-1 ps-0 pe-0">
-            <div class="col-1 user-info-col text-center py-1">
-                <img src="{{post.user.profile_pic.url}}" alt="user-avatar" class="user-avatar">
-                <a href="" class="username text-decoration-none">{{ post.user.fullname }}</a>
-                <small class="user-points">Points: {{comment.user.points}}</small><br>
-                <small class="user-posts">Posts: {{comment.user.num_posts}}</small>
+    <div class="row comment-section p-0 m-3 ">
+        <div class="row comment-info-row ms-0 mt-1 me-2 mb-1 ps-0 pe-0 ">
+            <div class="col-1 user-info-col text-center py-1 ">
+                <img src="{{post.user.profile_pic.url}} " alt="user-avatar " class="user-avatar ">
+                <a href=" " class="username text-decoration-none ">{{ post.user.fullname }}</a>
+                <small class="user-points ">Points: {{comment.user.points}}</small><br>
+                <small class="user-posts ">Posts: {{comment.user.num_posts}}</small>
             </div>
-            <div class="col comment-info-col p-2">
-                <p class="comment-content">{{ comment.content|safe }}</p>
+            <div class="col comment-info-col p-2 ">
+                <div class="row comment-content h-75 ">
+                    {{ comment.content|safe }}
+                </div>
+                <div class="row reply-section text-end align-text-bottom ">
+                    <div class="col reply ">
+                        <button class="btn " onclick="showReplies( '{{comment.id}}') ">Reply3</button>
+                        <div class="reply-div shadow p-3 mb-5 bg-white rounded mt-3 " id={{comment.id}} style="visibility:hidden; ">
+                            <form action=". " method="POST ">
+                                {% csrf_token %}
+                                <div class="form-floating post-reply-div ps-3 ">
+                                    <textarea class="form-control w-100 " placeholder="Leave a comment here " id="floatingTextarea " name="reply-content "></textarea>
+                                    <label class="ps-4 " for="floatingTextarea ">Reply Here</label>
+                                </div>
+                                <input name="comment-id " value="{{comment.id}} " type="hidden ">
+                                <button type="submit " class="btn text-uppercase ms-3 mt-3 " name="post-a-reply ">Comment</button>
+                            </form>
+                        </div>
+                    </div>
+
+
+
+
+
+
+
+
+                    <!-- post a reply
+                    <p>
+                        <button class="btn " onclick="showReplies( '{{comment.id}}') " type="button " data-bs-toggle="collapse " data-bs-target="#collapseWidthExample " aria-expanded="false " aria-controls="collapseWidthExample ">
+                        Reply
+                        </button>
+                        <button class="btn " onclick="showReplies( '{{comment.id}}') " type="submit ">Reply2</button>
+                    </p>
+                    <div id={{comment.id}} style="min-height: 120px; ">
+                        <div class="collapse collapse-horizontal " id="collapseWidthExample ">
+                            <div class="card card-body shadow p-3 mb-5 bg-body rounded " style="width: 100%; border: 1px solid black; ">
+                                <form action=". " method="POST ">
+                                    {% csrf_token %}
+                                    <div class="form-floating post-reply-div ps-3 ">
+                                        <textarea class="form-control w-100 " placeholder="Leave a comment here " id="floatingTextarea " name="reply-content "></textarea>
+                                        <label class="ps-4 " for="floatingTextarea ">Reply Here</label>
+                                    </div>
+                                    <button type="submit " class="btn text-uppercase ms-3 mt-3 " name="post-a-comment ">Comment</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div> -->
+                </div>
             </div>
         </div>
     </div>
 
     <!-- replies -->
     {% for reply in comment.replies.all %}
-    <div class="row replies-section p-0 m-3 ps-5">
-        <div class="row replies-info-row ms-0 mt-1 me-2 mb-1 ps-0 pe-0">
-            <div class="col-1 user-info-col text-center py-1">
-                <img src="{{post.user.profile_pic.url}}" alt="user-avatar" class="user-avatar">
-                <a href="" class="username text-decoration-none">{{ post.user.fullname }}</a>
-                <small class="user-points">Points: {{reply.user.points}}</small><br>
-                <small class="user-posts">Posts: {{reply.user.num_posts}}</small>
+    <div class="row replies-section p-0 m-3 ps-5 ">
+        <div class="row replies-info-row ms-0 mt-1 me-2 mb-1 ps-0 pe-0 ">
+            <div class="col-1 user-info-col text-center py-1 ">
+                <img src="{{post.user.profile_pic.url}} " alt="user-avatar " class="user-avatar ">
+                <a href=" " class="username text-decoration-none ">{{ post.user.fullname }}</a>
+                <small class="user-points ">Points: {{reply.user.points}}</small><br>
+                <small class="user-posts ">Posts: {{reply.user.num_posts}}</small>
             </div>
-            <div class="col reply-info-col p-2">
-                <p class="reply-content">{{ reply.content|safe }}</p>
+            <div class="col post-info-col p-2 h-75 ">
+                <div class="row post-content ">
+                    {{ reply.content|safe }}
+                </div>
             </div>
+
+            <!-- <div class="col reply-info-col p-2 ">
+                <p class="reply-content ">{{ reply.content|safe }}</p>
+            </div> -->
+
         </div>
     </div>
     {% endfor %} {% endfor %}
 
+    <!-- post a comment -->
+    <form action=". " method="POST ">
+        {% csrf_token %}
+        <div class="form-floating post-comment-div ps-3 ">
+            <textarea class="form-control w-100 " placeholder="Leave a comment here " id="floatingTextarea " name="comment-content "></textarea>
+            <label class="ps-4 " for="floatingTextarea ">Comment Here</label>
+        </div>
+        <button type="submit " class="btn text-uppercase ms-3 mt-3 " name="post-a-comment ">Comment</button>
+    </form>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js " integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p " crossorigin="anonymous "></script>
 </body>
 
 </html>
